# Job-agent

./: .env.example  .gitignore  README.md  pyproject.toml
config/: job_targets.py  settings.py
data/: applications.csv
job_agent/: __main__.py  export.py  main.py
job_agent/ai/: classifier.py  client.py  cover_letter.py  resume_selector.py  resume_tailor.py
job_agent/application/: applicator.py  form_filler.py  quota.py
job_agent/db/: models.py  store.py
job_agent/resumes/: loader.py  parser.py  renderer.py  schema.py
job_agent/resumes/template/: resume.css  resume.html.j2
job_agent/scrapers/: base.py  builtin_nyc.py  glassdoor.py  indeed.py  linkedin.py
job_agent/scrapers/ats/: greenhouse.py  lever.py
job_agent/ui/: cli.py
tests/: test_applications.py  test_classifier.py  test_scoring.py  test_scrapers.py  test_store.py
tests/fixtures/: sample_job.json
