[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-agent"
version = "0.1.0"
description = "Autonomous job application agent for systems/C++ engineers"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44.0",
    "anthropic>=0.28.0",
    "pdfplumber>=0.11.0",
    "rich>=13.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "aiosqlite>=0.20.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
job-agent = "job_agent.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["job_agent"]
